--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   button.icon-btn:disabled {background:#7f8c8d; cursor:not-allowed; box-shadow:none;}
   button.icon-btn:hover:not(:disabled){background:#1c5980; box-shadow:0 6px 16px rgba(28,89,128,0.6);}
   button.icon-btn:active:not(:disabled){background:#174663;}
-  button.icon-btn svg {fill:white; width:28px; height:28px;}
+  button.icon-btn svg {width:28px; height:28px;}
   @media(max-width:480px){button.icon-btn{width:56px;height:56px;}button.icon-btn svg{width:24px;height:24px;}}
 </style>
 </head>
@@ -36,9 +36,12 @@
   <button id="snapBtn" class="icon-btn" title="Snap Photo">
     <svg viewBox="0 0 24 24"><path d="M20 5h-3.586l-1.707-1.707A.996.996 0 0014 3H10a.996.996 0 00-.707.293L7.586 5H4c-1.103 0-2 .897-2 2v11c0 1.104.897 2 2 2h16c1.103 0 2-.896 2-2V7c0-1.103-.897-2-2-2zM12 18c-2.209 0-4-1.791-4-4s1.791-4 4-4c2.208 0 4 1.791 4 4s-1.792 4-4 4z"/><circle cx="12" cy="14" r="2.5"/></svg>
   </button>
-  <!-- Download Button -->
+
+  <!-- ✅ New Download Button -->
   <button id="downloadBtn" class="icon-btn" title="Download Photo" style="display:none;">
-    <svg viewBox="0 0 24 24"><path fill="white" d="M5 20h14v-2H5v2zm7-18v12l5-5 1.4 1.4L12 18l-6.4-6.6L7 11l5 5V2z"/></svg>
+    <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      <path stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 15v2a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3v-2m-8 1V4m0 12-4-4m4 4 4-4"/>
+    </svg>
   </button>
 </div>
 
@@ -46,12 +49,12 @@
 
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 <script>
-const video = document.getElementById("video");
-const canvas = document.getElementById("canvas");
-const snapBtn = document.getElementById("snapBtn");
-const downloadBtn = document.getElementById("downloadBtn");
-const flashOverlay = document.getElementById("flashOverlay");
-const ctx = canvas.getContext("2d");
+const video=document.getElementById("video");
+const canvas=document.getElementById("canvas");
+const snapBtn=document.getElementById("snapBtn");
+const downloadBtn=document.getElementById("downloadBtn");
+const flashOverlay=document.getElementById("flashOverlay");
+const ctx=canvas.getContext("2d");
 
 async function startCamera(){
   try{
@@ -81,10 +84,7 @@ async function drawQRCode(data,x,y,size){
   });
 }
 
-function triggerFlash(){
-  flashOverlay.style.opacity="1";
-  setTimeout(()=>{flashOverlay.style.opacity="0";},150);
-}
+function triggerFlash(){flashOverlay.style.opacity="1";setTimeout(()=>flashOverlay.style.opacity="0",150);}
 
 snapBtn.addEventListener("click",async()=>{
   snapBtn.disabled=true;
@@ -100,20 +100,18 @@ snapBtn.addEventListener("click",async()=>{
 
     let coordsText="GPS unavailable";
     let coords=null;
-    try{coords=await getPosition(); coordsText=`Lat:${coords.latitude.toFixed(6)}, Lon:${coords.longitude.toFixed(6)}`;}catch(e){console.warn("GPS error:",e);}
+    try{coords=await getPosition();coordsText=`Lat:${coords.latitude.toFixed(6)}, Lon:${coords.longitude.toFixed(6)}`;}catch(e){console.warn("GPS error:",e);}
 
     const now=new Date();
     const qrData=JSON.stringify({timestamp:now.toISOString(),latitude:coords?coords.latitude:null,longitude:coords?coords.longitude:null});
 
-    const qrSize=width*0.2;
+    const qrSize=width*0.25; // ✅ slightly larger QR
     await drawQRCode(qrData,width-qrSize-10,height-qrSize-10,qrSize);
 
-    ctx.font=`${qrSize/8}px monospace`;
-    ctx.fillStyle="white";
-    ctx.strokeStyle="black";
-    ctx.lineWidth=2;
+    ctx.font=`${qrSize/7}px monospace`; // ✅ slightly larger text
+    ctx.fillStyle="white";ctx.strokeStyle="black";ctx.lineWidth=2;
     const lines=[`${now.toLocaleString()}`,coordsText];
-    const lineHeight=qrSize/8+4;
+    const lineHeight=qrSize/7+4;
     let textY=height-10;
     for(let i=lines.length-1;i>=0;i--){
       const textWidth=ctx.measureText(lines[i]).width;
@@ -129,8 +127,8 @@ snapBtn.addEventListener("click",async()=>{
 });
 
 downloadBtn.addEventListener("click",()=>{
-  // ✅ Compress image & resize if too large
-  const maxW=1000; // keep QR readable
+  // ✅ Resize to 900px max & compress to ~40% quality
+  const maxW=900;
   let tempCanvas=canvas;
   if(canvas.width>maxW){
     const scale=maxW/canvas.width;
@@ -141,7 +139,7 @@ downloadBtn.addEventListener("click",()=>{
   }
   const link=document.createElement("a");
   link.download=`photo_${new Date().toISOString()}.jpg`;
-  link.href=tempCanvas.toDataURL("image/jpeg",0.7); // ✅ lower quality
+  link.href=tempCanvas.toDataURL("image/jpeg",0.4); // ✅ smaller file
   link.click();
 });
 
