--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
   button.icon-btn:hover:not(:disabled){background:#1c5980; box-shadow:0 6px 16px rgba(28,89,128,0.6);}
   button.icon-btn:active:not(:disabled){background:#174663;}
   button.icon-btn svg {width:28px; height:28px;}
+  /* Spinner Styles */
+  .spinner {
+    border:3px solid rgba(255,255,255,0.3);
+    border-top:3px solid white;
+    border-radius:50%;
+    width:28px;
+    height:28px;
+    animation:spin 1s linear infinite;
+  }
+  @keyframes spin { 100% { transform: rotate(360deg); } }
   @media(max-width:480px){button.icon-btn{width:56px;height:56px;}button.icon-btn svg{width:24px;height:24px;}}
 </style>
 </head>
@@ -32,15 +42,15 @@
 </div>
 
 <div class="button-row">
-  <!-- ✅ Snap Button with White Camera Icon -->
+  <!-- Snap Button -->
   <button id="snapBtn" class="icon-btn" title="Snap Photo">
-    <svg viewBox="0 0 24 24">
+    <svg id="cameraIcon" viewBox="0 0 24 24">
       <path fill="white" d="M20 5h-3.586l-1.707-1.707A.996.996 0 0014 3H10a.996.996 0 00-.707.293L7.586 5H4c-1.103 0-2 .897-2 2v11c0 1.104.897 2 2 2h16c1.103 0 2-.896 2-2V7c0-1.103-.897-2-2-2zM12 18c-2.209 0-4-1.791-4-4s1.791-4 4-4c2.208 0 4 1.791 4 4s-1.792 4-4 4z"/>
       <circle fill="white" cx="12" cy="14" r="2.5"/>
     </svg>
   </button>
 
-  <!-- ✅ Download Button using Provided SVG -->
+  <!-- Download Button -->
   <button id="downloadBtn" class="icon-btn" title="Download Photo" style="display:none;">
     <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
       <path stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 15v2a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3v-2m-8 1V4m0 12-4-4m4 4 4-4"/>
@@ -55,6 +65,7 @@
 const video=document.getElementById("video");
 const canvas=document.getElementById("canvas");
 const snapBtn=document.getElementById("snapBtn");
+const cameraIcon=document.getElementById("cameraIcon");
 const downloadBtn=document.getElementById("downloadBtn");
 const flashOverlay=document.getElementById("flashOverlay");
 const ctx=canvas.getContext("2d");
@@ -77,6 +88,18 @@ function getPosition(){
   });
 }
 
+async function getAddressFromCoords(lat, lon) {
+  const url = `https://nominatim.openstreetmap.org/reverse?format=json&lat=${lat}&lon=${lon}`;
+  try {
+    const res = await fetch(url, { headers: { 'User-Agent': 'FlyerForward/1.0' } });
+    if (!res.ok) throw new Error("Failed to fetch address");
+    const data = await res.json();
+    return data.display_name || null;
+  } catch {
+    return null;
+  }
+}
+
 async function drawQRCode(data,x,y,size){
   return new Promise((resolve,reject)=>{
     QRCode.toCanvas(data,{errorCorrectionLevel:'H',width:size},(err,qrCanvas)=>{
@@ -92,10 +115,25 @@ function triggerFlash(){
   setTimeout(()=>flashOverlay.style.opacity="0",150);
 }
 
+function showSpinner(){
+  cameraIcon.style.display="none";
+  const spinner=document.createElement("div");
+  spinner.className="spinner";
+  spinner.id="loadingSpinner";
+  snapBtn.appendChild(spinner);
+}
+
+function hideSpinner(){
+  const spinner=document.getElementById("loadingSpinner");
+  if(spinner) spinner.remove();
+  cameraIcon.style.display="block";
+}
+
 snapBtn.addEventListener("click",async()=>{
   snapBtn.disabled=true;
+  showSpinner();
   downloadBtn.style.display="none";
-  canvas.style.display="none"; // ✅ hide until final image is ready
+  canvas.style.display="none";
   triggerFlash();
 
   try{
@@ -107,22 +145,30 @@ snapBtn.addEventListener("click",async()=>{
 
     let coordsText="GPS unavailable";
     let coords=null;
-    try{coords=await getPosition();coordsText=`Lat:${coords.latitude.toFixed(6)}, Lon:${coords.longitude.toFixed(6)}`;}catch(e){console.warn("GPS error:",e);}
+    let address=null;
+    try {
+      coords=await getPosition();
+      coordsText=`Lat:${coords.latitude.toFixed(6)}, Lon:${coords.longitude.toFixed(6)}`;
+      address = await getAddressFromCoords(coords.latitude, coords.longitude);
+    } catch(e) {
+      console.warn("GPS or address error:",e);
+    }
 
     const now=new Date();
     const qrData=JSON.stringify({timestamp:now.toISOString(),latitude:coords?coords.latitude:null,longitude:coords?coords.longitude:null});
 
     const qrSize=width*0.25;
-    await drawQRCode(qrData,10,10,qrSize); // ✅ QR at top-left
+    await drawQRCode(qrData,10,10,qrSize);
 
-    ctx.font=`${qrSize/7}px monospace`;
+    ctx.font=`${qrSize/6}px monospace`;
     ctx.fillStyle="white";
     ctx.strokeStyle="black";
     ctx.lineWidth=2;
-    const lines=[`${now.toLocaleString()}`,coordsText];
-    const lineHeight=qrSize/7+4;
+    const lines = [`${now.toLocaleString()}`, coordsText];
+    if(address) lines.push(address);
+    const lineHeight=qrSize/6+6;
     let textY=height-10;
-    for(let i=lines.length-1;i>=0;i--){
+    for(let i=lines.length-1; i>=0; i--){
       const textWidth=ctx.measureText(lines[i]).width;
       const textX=(width-textWidth)/2;
       ctx.strokeText(lines[i],textX,textY);
@@ -130,11 +176,14 @@ snapBtn.addEventListener("click",async()=>{
       textY-=lineHeight;
     }
 
-    // ✅ Show canvas only when fully stamped
     canvas.style.display="block";
     downloadBtn.style.display="inline-flex";
-  }catch(err){alert("Error capturing photo: "+err);}
-  finally{snapBtn.disabled=false;}
+  }catch(err){
+    alert("Error capturing photo: "+err);
+  }finally{
+    hideSpinner();
+    snapBtn.disabled=false;
+  }
 });
 
 downloadBtn.addEventListener("click",()=>{
@@ -149,7 +198,7 @@ downloadBtn.addEventListener("click",()=>{
   }
   const link=document.createElement("a");
   link.download=`photo_${new Date().toISOString()}.jpg`;
-  link.href=tempCanvas.toDataURL("image/jpeg",0.4); // ✅ very compressed
+  link.href=tempCanvas.toDataURL("image/jpeg",0.4);
   link.click();
 });
 
