--- a/index.html
+++ b/index.html
@@ -7,92 +7,18 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
   * { box-sizing: border-box; }
-  body {
-    margin:0;
-    background:#f5f7fa;
-    font-family:'Inter',sans-serif;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    padding:2rem 1rem 3rem;
-    color:#333;
-    min-height:100vh;
-  }
-  h1 {
-    font-weight:600;
-    margin-bottom:2rem;
-    text-align:center;
-    color:#2c3e50;
-  }
-  .camera-container {
-    position:relative;
-    width:100%;
-    max-width:320px; /* smaller live view */
-  }
-  video {
-    border-radius:16px;
-    box-shadow:0 8px 24px rgba(44,62,80,0.15);
-    width:100%;
-    aspect-ratio:3/4;
-    object-fit:cover;
-    background:#000;
-  }
-  .flash {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:white;
-    opacity:0;
-    border-radius:16px;
-    pointer-events:none;
-    transition:opacity 0.3s ease;
-  }
-  .button-canvas-wrapper {
-    margin-top:1.8rem;
-    width:100%;
-    max-width:320px;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-  }
-  .button-row {
-    display:flex;
-    gap:2rem;
-    justify-content:center;
-    width: 100%;
-  }
-  button.icon-btn {
-    background:#2980b9;
-    border:none;
-    cursor:pointer;
-    border-radius:50%;
-    width:64px;
-    height:64px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    box-shadow:0 4px 12px rgba(41,128,185,0.4);
-    transition:background-color 0.3s ease, box-shadow 0.3s ease;
-  }
-  button.icon-btn:disabled {
-    background:#7f8c8d;
-    cursor:not-allowed;
-    box-shadow:none;
-  }
-  button.icon-btn:hover:not(:disabled) {
-    background:#1c5980;
-    box-shadow:0 6px 16px rgba(28,89,128,0.6);
-  }
-  button.icon-btn:active:not(:disabled) {
-    background:#174663;
-  }
-  button.icon-btn svg {
-    width:28px;
-    height:28px;
-  }
+  body { margin:0; background:#f5f7fa; font-family:'Inter',sans-serif; display:flex; flex-direction:column; align-items:center; padding:2rem 1rem 3rem; color:#333; min-height:100vh;}
+  h1 {font-weight:600; margin-bottom:2rem; text-align:center; color:#2c3e50;}
+  .camera-container {position:relative; width:100%; max-width:420px;}
+  video {border-radius:16px; box-shadow:0 8px 24px rgba(44,62,80,0.15); width:100%; aspect-ratio:3/4; object-fit:cover; background:#000;}
+  .flash {position:absolute; top:0; left:0; width:100%; height:100%; background:white; opacity:0; border-radius:16px; pointer-events:none; transition:opacity 0.3s ease;}
+  canvas {margin-top:1.5rem; border-radius:16px; max-width:420px; box-shadow:0 8px 24px rgba(44,62,80,0.15); width:100%; aspect-ratio:3/4; display:none;}
+  .button-row {margin-top:1.8rem; display:flex; gap:2rem; justify-content:center;}
+  button.icon-btn {background:#2980b9; border:none; cursor:pointer; border-radius:50%; width:64px; height:64px; display:flex; align-items:center; justify-content:center; box-shadow:0 4px 12px rgba(41,128,185,0.4); transition:background-color 0.3s ease, box-shadow 0.3s ease;}
+  button.icon-btn:disabled {background:#7f8c8d; cursor:not-allowed; box-shadow:none;}
+  button.icon-btn:hover:not(:disabled){background:#1c5980; box-shadow:0 6px 16px rgba(28,89,128,0.6);}
+  button.icon-btn:active:not(:disabled){background:#174663;}
+  button.icon-btn svg {width:28px; height:28px;}
   /* Spinner Styles */
   .spinner {
     border:3px solid rgba(255,255,255,0.3);
@@ -103,35 +29,7 @@
     animation:spin 1s linear infinite;
   }
   @keyframes spin { 100% { transform: rotate(360deg); } }
-  canvas {
-    border-radius:16px;
-    box-shadow:0 8px 24px rgba(44,62,80,0.15);
-    width: 50%;  /* much smaller snapped photo */
-    display:none;
-    aspect-ratio:3/4;
-    object-fit:cover;
-    max-width:160px;
-  }
-  @media(max-width:480px){
-    button.icon-btn{
-      width:56px;
-      height:56px;
-    }
-    button.icon-btn svg{
-      width:24px;
-      height:24px;
-    }
-    .camera-container {
-      max-width:280px;
-    }
-    .button-canvas-wrapper {
-      max-width:280px;
-    }
-    canvas {
-      max-width:140px;
-      width:50%;
-    }
-  }
+  @media(max-width:480px){button.icon-btn{width:56px;height:56px;}button.icon-btn svg{width:24px;height:24px;}}
 </style>
 </head>
 <body>
@@ -143,26 +41,24 @@
   <div id="flashOverlay" class="flash"></div>
 </div>
 
-<div class="button-canvas-wrapper">
-  <div class="button-row">
-    <!-- Snap Button -->
-    <button id="snapBtn" class="icon-btn" title="Snap Photo">
-      <svg id="cameraIcon" viewBox="0 0 24 24">
-        <path fill="white" d="M20 5h-3.586l-1.707-1.707A.996.996 0 0014 3H10a.996.996 0 00-.707.293L7.586 5H4c-1.103 0-2 .897-2 2v11c0 1.104.897 2 2 2h16c1.103 0 2-.896 2-2V7c0-1.103-.897-2-2-2zM12 18c-2.209 0-4-1.791-4-4s1.791-4 4-4c2.208 0 4 1.791 4 4s-1.792 4-4 4z"/>
-        <circle fill="white" cx="12" cy="14" r="2.5"/>
-      </svg>
-    </button>
+<div class="button-row">
+  <!-- ✅ Snap Button -->
+  <button id="snapBtn" class="icon-btn" title="Snap Photo">
+    <svg id="cameraIcon" viewBox="0 0 24 24">
+      <path fill="white" d="M20 5h-3.586l-1.707-1.707A.996.996 0 0014 3H10a.996.996 0 00-.707.293L7.586 5H4c-1.103 0-2 .897-2 2v11c0 1.104.897 2 2 2h16c1.103 0 2-.896 2-2V7c0-1.103-.897-2-2-2zM12 18c-2.209 0-4-1.791-4-4s1.791-4 4-4c2.208 0 4 1.791 4 4s-1.792 4-4 4z"/>
+      <circle fill="white" cx="12" cy="14" r="2.5"/>
+    </svg>
+  </button>
 
-    <!-- Download Button -->
-    <button id="downloadBtn" class="icon-btn" title="Download Photo" style="display:none;">
-      <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-        <path stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 15v2a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3v-2m-8 1V4m0 12-4-4m4 4 4-4"/>
-      </svg>
-    </button>
-  </div>
-
-  <canvas id="canvas"></canvas>
+  <!-- ✅ Download Button with Provided Icon -->
+  <button id="downloadBtn" class="icon-btn" title="Download Photo" style="display:none;">
+    <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+      <path stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 15v2a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3v-2m-8 1V4m0 12-4-4m4 4 4-4"/>
+    </svg>
+  </button>
 </div>
+
+<canvas id="canvas"></canvas>
 
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 <script>
@@ -223,7 +119,7 @@ function hideSpinner(){
 
 snapBtn.addEventListener("click",async()=>{
   snapBtn.disabled=true;
-  showSpinner();
+  showSpinner(); 
   downloadBtn.style.display="none";
   canvas.style.display="none";
   triggerFlash();
@@ -237,10 +133,7 @@ snapBtn.addEventListener("click",async()=>{
 
     let coordsText="GPS unavailable";
     let coords=null;
-    try{
-      coords=await getPosition();
-      coordsText=`Lat:${coords.latitude.toFixed(6)}, Lon:${coords.longitude.toFixed(6)}`;
-    }catch(e){console.warn("GPS error:",e);}
+    try{coords=await getPosition();coordsText=`Lat:${coords.latitude.toFixed(6)}, Lon:${coords.longitude.toFixed(6)}`;}catch(e){console.warn("GPS error:",e);}
 
     const now=new Date();
     const qrData=JSON.stringify({timestamp:now.toISOString(),latitude:coords?coords.latitude:null,longitude:coords?coords.longitude:null});
