--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   .camera-container {
     position:relative;
     width:100%;
-    max-width:320px; /* smaller live view */
+    max-width:320px; /* live camera width */
   }
   video {
     border-radius:16px;
@@ -106,11 +106,11 @@
   canvas {
     border-radius:16px;
     box-shadow:0 8px 24px rgba(44,62,80,0.15);
-    width: 50%;  /* much smaller snapped photo */
+    width: 100%;    /* SAME size as live camera */
+    max-width:320px;
     display:none;
     aspect-ratio:3/4;
     object-fit:cover;
-    max-width:160px;
   }
   @media(max-width:480px){
     button.icon-btn{
@@ -128,8 +128,8 @@
       max-width:280px;
     }
     canvas {
-      max-width:140px;
-      width:50%;
+      max-width:280px;
+      width: 100%;
     }
   }
 </style>
