--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   .camera-container {
     position:relative;
     width:100%;
-    max-width:320px; /* live camera width */
+    max-width:320px;
   }
   video {
     border-radius:16px;
@@ -77,12 +77,13 @@
     align-items:center;
     justify-content:center;
     box-shadow:0 4px 12px rgba(41,128,185,0.4);
-    transition:background-color 0.3s ease, box-shadow 0.3s ease;
+    transition:background-color 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
   }
   button.icon-btn:disabled {
     background:#7f8c8d;
     cursor:not-allowed;
     box-shadow:none;
+    opacity:0.5;
   }
   button.icon-btn:hover:not(:disabled) {
     background:#1c5980;
@@ -95,7 +96,6 @@
     width:28px;
     height:28px;
   }
-  /* Spinner Styles */
   .spinner {
     border:3px solid rgba(255,255,255,0.3);
     border-top:3px solid white;
@@ -108,31 +108,18 @@
   canvas {
     border-radius:16px;
     box-shadow:0 8px 24px rgba(44,62,80,0.15);
-    width: 100%;    /* SAME size as live camera */
+    width: 100%;
     max-width:320px;
     display:none;
     aspect-ratio:3/4;
     object-fit:cover;
   }
   @media(max-width:480px){
-    button.icon-btn{
-      width:56px;
-      height:56px;
-    }
-    button.icon-btn svg{
-      width:24px;
-      height:24px;
-    }
-    .camera-container {
-      max-width:280px;
-    }
-    .button-canvas-wrapper {
-      max-width:280px;
-    }
-    canvas {
-      max-width:280px;
-      width: 100%;
-    }
+    button.icon-btn{width:56px;height:56px;}
+    button.icon-btn svg{width:24px;height:24px;}
+    .camera-container {max-width:280px;}
+    .button-canvas-wrapper {max-width:280px;}
+    canvas {max-width:280px;width:100%;}
   }
 </style>
 </head>
@@ -156,7 +143,7 @@
     </button>
 
     <!-- Download Button -->
-    <button id="downloadBtn" class="icon-btn" title="Download Photo" style="display:none;">
+    <button id="downloadBtn" class="icon-btn" title="Download Photo" style="display:none;" disabled>
       <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
         <path stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 15v2a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3v-2m-8 1V4m0 12-4-4m4 4 4-4"/>
       </svg>
@@ -227,6 +214,7 @@ snapBtn.addEventListener("click",async()=>{
   snapBtn.disabled=true;
   showSpinner();
   downloadBtn.style.display="none";
+  downloadBtn.disabled=true;
   canvas.style.display="none";
   triggerFlash();
 
@@ -267,6 +255,7 @@ snapBtn.addEventListener("click",async()=>{
 
     canvas.style.display="block";
     downloadBtn.style.display="inline-flex";
+    downloadBtn.disabled=false;
   }catch(err){alert("Error capturing photo: "+err);}
   finally{
     hideSpinner();
@@ -275,6 +264,8 @@ snapBtn.addEventListener("click",async()=>{
 });
 
 downloadBtn.addEventListener("click",()=>{
+  if(downloadBtn.disabled) return;
+
   const maxW=900;
   let tempCanvas=canvas;
   if(canvas.width>maxW){
@@ -284,26 +275,29 @@ downloadBtn.addEventListener("click",()=>{
     tempCanvas.height=canvas.height*scale;
     tempCanvas.getContext("2d").drawImage(canvas,0,0,tempCanvas.width,tempCanvas.height);
   }
+
   const link=document.createElement("a");
   link.download=`photo_${new Date().toISOString()}.jpg`;
   link.href=tempCanvas.toDataURL("image/jpeg",0.4);
   link.click();
+
+  // ✅ disable after download
+  downloadBtn.disabled=true;
+  setTimeout(()=>{
+    canvas.style.display="none";
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+  },800);
 });
 
 startCamera();
 </script>
 
-
-  
 <script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('service-worker.js')
-      .then(() => console.log('Service Worker Registered'))
-      .catch(err => console.warn('Service Worker registration failed:', err));
-  }
+if('serviceWorker' in navigator){
+  navigator.serviceWorker.register('service-worker.js')
+    .then(()=>console.log('Service Worker Registered'))
+    .catch(err=>console.warn('Service Worker registration failed:',err));
+}
 </script>
-
-
-  
 </body>
 </html>
