--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
 </style>
 </head>
 <body>
+  
+<img src="icon-512.png" alt="Flyer Forward Stamped Photo Generator Icon" style="width:128px;height:128px;display:block;margin:0 auto 1rem auto;border-radius:24px;">
 
 <h1>Flyer Forward: Stamped Photo Generator</h1>
 
