--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   }
   h1 {
     font-weight:600;
-    margin-bottom:2rem;
+    margin-bottom:.5rem;
     text-align:center;
     color:#2c3e50;
   }
@@ -125,7 +125,7 @@
 </head>
 <body>
   
-<img src="icon-512.png" alt="Flyer Forward Stamped Photo Generator Icon" style="width:128px;height:128px;display:block;margin:0 auto 1rem auto;border-radius:24px;">
+<img src="icon-512.png" alt="Flyer Forward Stamped Photo Generator Icon" style="width:128px;height:128px;display:block;margin:0 auto .5rem auto;border-radius:24px;">
 
 <h1>Flyer Forward: Stamped Photo Generator</h1>
 
