--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="manifest" href="manifest.json" />
 <meta name="theme-color" content="#2980b9" />
-<title>Flyer Forward: Stamped Photo Generator</title>
+<title>Flyer Forward Stamped Photo Generator</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
   * { box-sizing: border-box; }
@@ -22,7 +22,7 @@
   }
   h1 {
     font-weight:600;
-    margin-bottom:.5rem;
+    margin-bottom:.1rem;
     text-align:center;
     color:#2c3e50;
   }
@@ -126,8 +126,6 @@
 <body>
   
 <img src="icon-512.png" alt="Flyer Forward Stamped Photo Generator Icon" style="width:128px;height:128px;display:block;margin:0 auto .25rem auto;border-radius:24px;">
-
-<h1>Flyer Forward: Stamped Photo Generator</h1>
 
 <div class="camera-container">
   <video id="video" autoplay playsinline></video>
